башкартостан скипири принц

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 <div class="road">
     <div class="div-line"></div>
+    <lab>
+        введите ырик
+        <input type="text" width="200px">
+    </lab>
 </div>
 <div class="car">
     <div class="wheel wheel_1"></div>
