--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <label>
     Введите текст
-    <input type="text" value="🐖">
+    <input type="text">
 </label>
 <script src="js/script.js"></script>
 </body>
