изучил все виды кунг фу

--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
 
 </head>
 <body>
-<div class="road">
-    <div class="div-line"></div>
-</div>
-<div class="car">
-    <div class="wheel wheel_1"></div>
-    <div class="wheel wheel_2"></div>
-    <div class="wheel wheel_3"></div>
-    <div class="wheel wheel_4"></div>
-    <div class="car-body"></div>
-</div>
+<label>
+    Введите текст:
+    <input type="text"/>
+</label>
+
 <script src="js/script.js"></script>
+<script src="js/1.js"></script>
 </body>
 </html>
