--- a/index.html
+++ b/index.html
@@ -7,16 +7,11 @@
 
 </head>
 <body>
-<div class="road">
-    <div class="div-line"></div>
-</div>
-<div class="car">
-    <div class="wheel wheel_1"></div>
-    <div class="wheel wheel_2"></div>
-    <div class="wheel wheel_3"></div>
-    <div class="wheel wheel_4"></div>
-    <div class="car-body"></div>
-</div>
-<script src="js/script.js"></script>
+<label>
+    веди тек:
+    <input type="text">
+</label>
+
+<script src="js/pi.js"></script>
 </body>
 </html>
