--- a/index.html
+++ b/index.html
@@ -9,10 +9,26 @@
 <body>
 <div class="road">
     <div class="div-line"></div>
-    <lab>
-        введите ырик
-        <input type="text" width="200px">
-    </lab>
+      <label>
+    введите первое число
+    <input type="number" id="num1">
+</label>
+    <div>
+    <button id="sum">+</button>
+    <button id="minus">-</button>
+    <button id="del">/</button>
+    <button id="ymn">*</button>
+    </div>
+
+    <label>
+        введите второе число
+        <input type="number" id="num2">
+    </label>
+    <br>
+    <label>
+       ответ
+        <input type="number" id="answer" readonly>
+    </label>
 </div>
 <div class="car">
     <div class="wheel wheel_1"></div>
