--- a/index.html
+++ b/index.html
@@ -7,11 +7,28 @@
 
 </head>
 <body>
+<label>
+    Первое число:
+    <input type="number" id="num1">
+</label>
+<br>
+<label>
+    Второе число:
+    <input type="number" id="num2">
+</label>
+<div>
+    <button id="sum">+</button>
+    <button id="min">-</button>
+    <button id="umn">*</button>
+    <button id="raz">/</button>
+</div>
 
 <label>
-    Введите текст:
-    <input type="text">
+    Получается:
+    <!--<input type="text" id="answer" readonly>-->
+    <b id="answer">0</b>
 </label>
+
 
 <script src="js/script.js"></script>
 </body>
