изучил все виды кунг фу x2

--- a/index.html
+++ b/index.html
@@ -8,8 +8,24 @@
 </head>
 <body>
 <label>
-    Введите текст:
-    <input type="text"/>
+    Первое число:
+    <input type="number" id="num1">
+</label>
+<br>
+<label>
+     Второе число:
+    <input type="number" id="num2">
+</label>
+<div>
+    <button id="sum">+</button>
+    <button id="minus">-</button>
+    <button id="zvezda">*</button>
+    <button id="slash">/</button>
+</div>
+
+<label>
+    Получается:
+    <input type="text" id="answer" readonly>
 </label>
 
 <script src="js/script.js"></script>
